# sky_pro_7

./: pyproject.toml
config/: settings.py  urls.py
service/: admin.py  models.py
